--- a/frontend/src/app/components/mousewheel-scrolling/mousewheel-scrolling.component.html
+++ b/frontend/src/app/components/mousewheel-scrolling/mousewheel-scrolling.component.html
@@ -1,9 +1,13 @@
 <navigatie-menu></navigatie-menu>
 <div class="time-span" #timeSpan>
-    <div *ngFor="let ship of ships" class="ships">
-        <div class="ship" [style.margin-left.px]="ship.pos.x * minuteWidth" [style.margin-top.px]="ship.pos.y" [style.width.px]="ship.length * minuteWidth"></div>
+  @for (ship of ships; track ship) {
+    <div class="ships">
+      <div class="ship" [style.margin-left.px]="ship.pos.x * minuteWidth" [style.margin-top.px]="ship.pos.y" [style.width.px]="ship.length * minuteWidth"></div>
     </div>
-    <div *ngFor="let minute of minutes; let i = index;" class="minute" [style.min-width.px]="minuteWidth - 1">{{minute}}</div>
+  }
+  @for (minute of minutes; track minute; let i = $index) {
+    <div class="minute" [style.min-width.px]="minuteWidth - 1">{{minute}}</div>
+  }
 </div>
 
 <div class="block">
