--- a/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
+++ b/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
@@ -6,6 +6,7 @@
     <a [routerLink]="['/processSteps']"><button [ngClass]="{'currentPage':currentPage === '/processSteps'}">Process steps</button></a>
     <a [routerLink]="['/security']"><button [ngClass]="{'currentPage':currentPage === '/security'}">Security</button></a>
     <a [routerLink]="['/materialdesign']"><button [ngClass]="{'currentPage':currentPage === '/materialdesign'}">Material design</button></a>
+    <a [routerLink]="['/three-body-problem']"><button [ngClass]="{'currentPage':currentPage === '/three-body-problem'}">Three Body Problem</button></a>
     <a [routerLink]="['/three-d']"><button [ngClass]="{'currentPage':currentPage === '/three-d'}">3D</button></a>
     <a [routerLink]="['/mousewheelScrolling']"><button [ngClass]="{'currentPage':currentPage === '/mousewheelScrolling'}">Mousewheel scrolling</button></a>
     <a [routerLink]="['/login']"><button [ngClass]="{'currentPage':currentPage === '/login'}">{{privateStatus}}</button></a>
